--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <header class="flexCon">
 	<div id="home">Future <span>Web Developers</span></div>
 </header>
+<nav class="flexCon">
+	<div>Services</div>
+	<div>Contact</div>
+	<div>Something else</div>
+	<div>Another thing</div>
+</nav>
 <main class="indexMain">
 	<div class="teamHeading">Our Team</div>
 	<div class="flexCon team">
