--- a/team-member.html
+++ b/team-member.html
@@ -10,6 +10,12 @@
 <header class="flexCon">
 	<div id="home">Future <span>Web Developer</span></div>
 </header>
+<nav class="flexCon">
+	<div>Services</div>
+	<div>Contact</div>
+	<div>Blogs</div>
+	<div>News</div>
+</nav>
 <main class="indexMain">
 	<div class="flexCon teamMember">
 		<div class="flexCon imgCon">
