--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <nav class="flexCon">
 	<div>Services</div>
 	<div>Contact</div>
-	<div>Something else</div>
-	<div>Another thing</div>
+	<div>Blogs</div>
+	<div>Newsletter</div>
 </nav>
 <main class="indexMain">
 	<div class="teamHeading">Our Team</div>
