--- a/team-member.html
+++ b/team-member.html
@@ -14,7 +14,7 @@
 	<div>Services</div>
 	<div>Contact</div>
 	<div>Blogs</div>
-	<div>News</div>
+	<div>Newsletter</div>
 </nav>
 <main class="indexMain">
 	<div class="flexCon teamMember">
