--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 	<div class="teamHeading">Our Team</div>
 	<div class="flexCon team">
 		<div class="flexCon member" id="member1">
-			<img src="img/person1.png">
+			<img src="img/Pascal.jpg">
 			<div>name<br>member1</div>
 		</div>
 		<div class="flexCon member" id="member2">
-			<img src="img/person2.png">
+			<img src="img/Sade.jpg">
 			<div>name<br>member2</div>
 		</div>
 	</div>
 	<div class="flexCon team">
 		<div class="flexCon member" id="member3">
-			<img src="img/person1.png">
+			<img src="img/Mahtab.jpg">
 			<div>name<br>member3</div>
 		</div>
 		<div class="flexCon member" id="member4">
@@ -40,7 +40,7 @@
 	</div>
 </main>
 <footer class="flexCon">
-	
+	<div class="slogan">Teamwork makes the Dream work!</div>
 </footer>
 </div>
 <script type="text/javascript" src="script.js"></script>
