--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 	<div class="flexCon team">
 		<div class="flexCon member" id="member1">
 			<img src="img/Pascal.jpg">
-			<div>name<br>member1</div>
+			<div>Pascal</div>
 		</div>
 		<div class="flexCon member" id="member2">
 			<img src="img/Sade.jpg">
-			<div>name<br>member2</div>
+			<div>Sade</div>
 		</div>
 	</div>
 	<div class="flexCon team">
 		<div class="flexCon member" id="member3">
 			<img src="img/Mahtab.jpg">
-			<div>name<br>member3</div>
+			<div>Mahtab</div>
 		</div>
 		<div class="flexCon member" id="member4">
-			<img src="img/person2.png">
-			<div>name<br>member4</div>
+			<img src="img/Ibrahim.jpg">
+			<div>Ibrahim</div>
 		</div>
 	</div>
 </main>
