--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="container">	
 <header class="flexCon">
-	<div id="home">Future <span>Web Developers</span></div>
+	<div class="flexCon imgCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div><span>evelopaz</span></div>
 </header>
 <nav class="flexCon">
 	<div>Services</div>
@@ -16,33 +16,39 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
+<div class="container">	
 <main class="indexMain">
 	<div class="teamHeading">Our Team</div>
-	<div class="flexCon team">
-		<div class="flexCon member" id="member1">
-			<img src="img/Pascal.jpg">
-			<div>Pascal</div>
+	<div class="flexCon text-teamCon">
+		<div class="textBox">where is the text</div>
+		<div>	
+		<div class="flexCon team">
+			<div class="flexCon member" id="member1">
+				<img src="img/Pascal.jpg">
+				<div>Pascal</div>
+			</div>
+			<div class="flexCon member" id="member2">
+				<img src="img/Sade.jpg">
+				<div>Sade</div>
+			</div>
 		</div>
-		<div class="flexCon member" id="member2">
-			<img src="img/Sade.jpg">
-			<div>Sade</div>
+		<div class="flexCon team">
+			<div class="flexCon member" id="member3">
+				<img src="img/Mahtab.jpg">
+				<div>Mahtab</div>
+			</div>
+			<div class="flexCon member" id="member4">
+				<img src="img/Ibrahim.jpg">
+				<div>Ibrahim</div>
+			</div>
 		</div>
-	</div>
-	<div class="flexCon team">
-		<div class="flexCon member" id="member3">
-			<img src="img/Mahtab.jpg">
-			<div>Mahtab</div>
-		</div>
-		<div class="flexCon member" id="member4">
-			<img src="img/Ibrahim.jpg">
-			<div>Ibrahim</div>
 		</div>
 	</div>
 </main>
+</div>
 <footer class="flexCon">
 	<div class="slogan">Teamwork makes the Dream work!</div>
 </footer>
-</div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
