--- a/team-member.html
+++ b/team-member.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="container">	
 <header class="flexCon">
-	<div id="home">Future <span>Web Developer</span></div>
+	<div class="flexCon imgCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div><span>evelopaz</span></div>
 </header>
 <nav class="flexCon">
 	<div>Services</div>
@@ -16,6 +16,7 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
+<div class="container">	
 <main class="indexMain">
 	<div class="flexCon teamMember">
 		<div class="flexCon imgCon">
@@ -27,13 +28,13 @@
 		</div>
 	</div>
 </main>
+</div>
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
 		<p>email</p>
 		<p>TelNumber</p>
 	</div>
 </footer>
-</div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
