updates files, adds member pages

--- a/member-Ibrahim.html
+++ b/member-Ibrahim.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>CodeReview3 Pascal Tonsern</title>
+	<title>Team Work</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -16,18 +16,20 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
+<div class="background">
 <div class="container">	
 <main class="indexMain">
 	<div class="flexCon teamMember">
 		<div class="flexCon imgCon">
-			<img src="img/person1.png">
+			<img src="img/Ibrahim.jpg">
 		</div>
 		<div class="textCon">
-			<h2>Name</h2>
+			<h2>Ibrahim</h2>
 			<p>lots of text</p>
 		</div>
 	</div>
 </main>
+</div>
 </div>
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
