--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>CodeReview3 Pascal Tonsern</title>
+	<title>Team Work</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -16,6 +16,7 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
+<div class="background">
 <div class="container">	
 <main class="indexMain">
 	<div class="teamHeading">Our Team</div>
@@ -45,6 +46,7 @@
 		</div>
 	</div>
 </main>
+</div>
 </div>
 <footer class="flexCon">
 	<div class="slogan">Teamwork makes the Dream work!</div>
