--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header class="flexCon">
-	<div class="flexCon imgCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div class="flexCon logoCon"><img id="home" src="img/Logo02.jpg"></div>
 	<div><span>evelopaz</span></div>
 </header>
 <nav class="flexCon">
