--- a/member-Pascal.html
+++ b/member-Pascal.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header class="flexCon">
-	<div class="flexCon imgCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div class="flexCon logoCon"><img id="home" src="img/Logo02.jpg"></div>
 	<div><span>evelopaz</span></div>
 </header>
 <nav class="flexCon">
@@ -24,8 +24,13 @@
 			<img src="img/Pascal.jpg">
 		</div>
 		<div class="textCon">
-			<h2>Pascal</h2>
-			<p>lots of text</p>
+			<h2>Pascal Tonsern</h2>
+			<p>dfghjklhgh jeklfghijgfdg dfghjklhg hjeklfghijgfdg
+			dfghj klhghjeklfgh ijgfdg
+		dfghjk lhghjeklf ghijgfdg
+	dfghjklhghjeklfghijgfdg
+dfghjklhghjeklfghijgfdg
+dfghjklhghjeklfghijgfdg</p>
 		</div>
 	</div>
 </main>
@@ -33,8 +38,8 @@
 </div>
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
-		<p>email</p>
-		<p>TelNumber</p>
+		<p>pascal1805@hotmail.de</p>
+		<p>+43-676-714-7237</p>
 	</div>
 </footer>
 <script type="text/javascript" src="script.js"></script>
