adds responsiveness, text shadow, repositioning, pascal-member file update

--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
 <main class="indexMain">
 	<div class="teamHeading">Our Team</div>
 	<div class="flexCon text-teamCon">
+		<div class="teamCon">	
+			<div class="flexCon team">
+				<div class="flexCon member" id="member1">
+					<img src="img/Pascal.jpg">
+					<div>Pascal</div>
+				</div>
+				<div class="flexCon member" id="member2">
+					<img src="img/Sade.jpg">
+					<div>Sade</div>
+				</div>
+			</div>
+			<div class="flexCon team">
+				<div class="flexCon member" id="member3">
+					<img src="img/Mahtab.jpg">
+					<div>Mahtab</div>
+				</div>
+				<div class="flexCon member" id="member4">
+					<img src="img/Ibrahim.jpg">
+					<div>Ibrahim</div>
+				</div>
+			</div>
+		</div>
 		<div class="textBox">where is the text</div>
-		<div>	
-		<div class="flexCon team">
-			<div class="flexCon member" id="member1">
-				<img src="img/Pascal.jpg">
-				<div>Pascal</div>
-			</div>
-			<div class="flexCon member" id="member2">
-				<img src="img/Sade.jpg">
-				<div>Sade</div>
-			</div>
-		</div>
-		<div class="flexCon team">
-			<div class="flexCon member" id="member3">
-				<img src="img/Mahtab.jpg">
-				<div>Mahtab</div>
-			</div>
-			<div class="flexCon member" id="member4">
-				<img src="img/Ibrahim.jpg">
-				<div>Ibrahim</div>
-			</div>
-		</div>
-		</div>
 	</div>
 </main>
 </div>
