--- a/member-Pascal.html
+++ b/member-Pascal.html
@@ -25,12 +25,10 @@
 		</div>
 		<div class="textCon">
 			<h2>Pascal Tonsern</h2>
-			<p>dfghjklhgh jeklfghijgfdg dfghjklhg hjeklfghijgfdg
-			dfghj klhghjeklfgh ijgfdg
-		dfghjk lhghjeklf ghijgfdg
-	dfghjklhghjeklfghijgfdg
-dfghjklhghjeklfghijgfdg
-dfghjklhghjeklfghijgfdg</p>
+			<p>Hi there, I am currently studying at CodeFactory to become a Web Developer.</p>
+			<p>It is an amazing experience, working with lots of different individuals and seeing all kinds of new ideas and ways to approach challenges.</p>
+			<p>I have a little bit of background knowledge of scripting languages (I went through hell with C.... no "++" just C). So i am confident in my JavaScript skills.</p>
+			<p>I also brought some knowledge about HTML CSS to the course. Mostly selftaught but it was fun to research and even more fun to find out that not everything , regarding coding, is as tiresome as C :P.</p>
 		</div>
 	</div>
 </main>
@@ -39,7 +37,7 @@ dfghjklhghjeklfghijgfdg</p>
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
 		<p>pascal1805@hotmail.de</p>
-		<p>+43-676-714-7237</p>
+		<p> &#x260F; +43-676-714-7237</p>
 	</div>
 </footer>
 <script type="text/javascript" src="script.js"></script>
