adds textbox-backgrounds, text borders

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 	<div class="flexCon text-teamCon">
 		<div class="teamCon">	
 			<div class="flexCon team">
-				<div class="flexCon member" id="member1">
-					<img src="img/Pascal.jpg">
+				<div class="flexCon member">
+					<img id="member1" src="img/Pascal.jpg">
 					<div>Pascal</div>
 				</div>
-				<div class="flexCon member" id="member2">
-					<img src="img/Sade.jpg">
+				<div class="flexCon member">
+					<img id="member2" src="img/Sade.jpg">
 					<div>Sade</div>
 				</div>
 			</div>
 			<div class="flexCon team">
-				<div class="flexCon member" id="member3">
-					<img src="img/Mahtab.jpg">
+				<div class="flexCon member">
+					<img id="member3" src="img/Mahtab.jpg">
 					<div>Mahtab</div>
 				</div>
-				<div class="flexCon member" id="member4">
-					<img src="img/Ibrahim.jpg">
+				<div class="flexCon member">
+					<img id="member4" src="img/Ibrahim.jpg">
 					<div>Ibrahim</div>
 				</div>
 			</div>
