--- a/member-Mahtab.html
+++ b/member-Mahtab.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header class="flexCon">
-	<div class="flexCon imgCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div class="flexCon logoCon"><img id="home" src="img/Logo02.jpg"></div>
 	<div><span>evelopaz</span></div>
 </header>
 <nav class="flexCon">
@@ -24,8 +24,8 @@
 			<img src="img/Mahtab.jpg">
 		</div>
 		<div class="textCon">
-			<h2>Mahtab</h2>
-			<p>lots of text</p>
+			<h2>Mahtab Nahayati</h2>
+			<p>I was born in IRAN,studied applied mathematics and graphic/interior design at tehran University.I have experience as a graphic designer and painter.At the moment,i am studying full stack Web Development at codefactory.I find it very interesting.Every second,i learn something new.</p>
 		</div>
 	</div>
 </main>
@@ -33,8 +33,8 @@
 </div>
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
-		<p>email</p>
-		<p>TelNumber</p>
+		<p>email:mahtabnahayati@gmail.com</p>
+		<p>TelNumber:+436 503 066 790</p>
 	</div>
 </footer>
 <script type="text/javascript" src="script.js"></script>
