--- a/member-Ibrahim.html
+++ b/member-Ibrahim.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header class="flexCon">
-	<div class="flexCon imgCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div class="flexCon logoCon"><img id="home" src="img/Logo02.jpg"></div>
 	<div><span>evelopaz</span></div>
 </header>
 <nav class="flexCon">
@@ -24,8 +24,10 @@
 			<img src="img/Ibrahim.jpg">
 		</div>
 		<div class="textCon">
-			<h2>Ibrahim</h2>
-			<p>lots of text</p>
+			<h2><strong>Faisal Ibrahimi</strong></h2>
+			<p><strong>Hi..</strong>This is Faisal. I am 20 years old i born in Badakhshan,Afghanistan.<br><br> I studied (IT) in Afghanistan. 
+				I am currently learning Web Developing in CodeFactory.It's intersting to learn programming.<br><br>  I like to learn more about programming. I like to be a good Web Developer in the future.
+			</p>
 		</div>
 	</div>
 </main>
@@ -33,8 +35,8 @@
 </div>
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
-		<p>email</p>
-		<p>TelNumber</p>
+		<p><strong>Email Address:</strong> Faisal.Ibrahimi786@gmail.com</p>
+		<p><strong>Tel No:</strong> +43(0)660-623-5365</p>
 	</div>
 </footer>
 <script type="text/javascript" src="script.js"></script>
