--- a/member-Mahtab.html
+++ b/member-Mahtab.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="textCon">
 			<h2>Mahtab Nahayati</h2>
-			<p>I was born in IRAN,studied applied mathematics and graphic/interior design at tehran University.I have experience as a graphic designer and painter.At the moment,i am studying full stack Web Development at codefactory.I find it very interesting.Every second,i learn something new.</p>
+			<p>I was born in Iran and i have earnedmy bachelor degree in the field of mathematics there.I have also spent several artistical courses like grafics and interior design at University of Tehran.I have experience as a painter and graphic artist.At the moment,i am studying full stack Web Development at codefactory.I find it very interesting.Every second,i learn something new.</p>
 		</div>
 	</div>
 </main>
