--- a/member-Sade.html
+++ b/member-Sade.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Team Work</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="sadestyle.css">
 </head>
 <body>
 <header class="flexCon">
-	<div class="flexCon imgCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div class="flexCon logoCon"><img id="home" src="img/Logo02.jpg"></div>
 	<div><span>evelopaz</span></div>
 </header>
 <nav class="flexCon">
@@ -24,8 +25,8 @@
 			<img src="img/Sade.jpg">
 		</div>
 		<div class="textCon">
-			<h2>Sade</h2>
-			<p>lots of text</p>
+			<h2>Sade Otaru</h2>
+		    <p>Sade! wants to be a future Webdesigner,its alot of commitment but its wort it.I had no knowlege of Html/Css until CodeFactory showed up.</p>
 		</div>
 	</div>
 </main>
@@ -33,8 +34,8 @@
 </div>
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
-		<p>email</p>
-		<p>TelNumber</p>
+		<p>sadeotaru@hotmail.com</p>
+		<p> &#x260F; 0676/3362941</p>
 	</div>
 </footer>
 <script type="text/javascript" src="script.js"></script>
