--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="flexCon member">
 					<img id="member4" src="img/Ibrahim.jpg">
-					<div>Ibrahim</div>
+					<div>Ibrahimi</div>
 				</div>
 			</div>
 		</div>
