--- a/member-Ibrahimi.html
+++ b/member-Ibrahimi.html
@@ -25,8 +25,8 @@
 		</div>
 		<div class="textCon">
 			<h2><strong>Faisal Ibrahimi</strong></h2>
-			<p><strong>Hi..</strong>This is Faisal. I am 20 years old i born in Badakhshan,Afghanistan.<br><br> I studied (IT) in Afghanistan. 
-				I am currently learning Web Developing in CodeFactory.It's intersting to learn programming.<br><br>  I like to learn more about programming. I like to be a good Web Developer in the future.
+			<p><strong>Hi..<br><br> </strong>This is Faisal. I am 20 years old i born in Badakhshan,Afghanistan.Since 2 years i live in Austria.<br><br> I studied (IT) in Afghanistan. 
+				I am currently learning Web Development in CodeFactory.It's intersting to learn programming.<br><br>  I like to learn more about programming. I like to be a good Web Developer in the future.
 			</p>
 		</div>
 	</div>
