--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="textBox">where is the text</div>
+		<div class="textBox">We as Web developers design and create websites. We are responsible for the look of the site. We are also responsible for the site’s technical aspects, such as its performance and capacity, which are measures of a website’s speed and how much traffic the site can handle. In addition, web developers may create content for the site.</div>
 	</div>
 </main>
 </div>
