--- a/member-Mahtab.html
+++ b/member-Mahtab.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="textCon">
 			<h2>Mahtab Nahayati</h2>
-			<p>I was born in Iran and i have earnedmy bachelor degree in the field of mathematics there.I have also spent several artistical courses like grafics and interior design at University of Tehran.<br>I have experience as a painter and graphic artist.<br>At the moment,i am studying full stack Web Development at codefactory.I find it very interesting.Every second,i learn something new.</p>
+			<p>I was born in Iran and i have earned my bachelor degree in the field of mathematics there.I have also spent several artistical courses like grafics and interior design at University of Tehran.<br>I have experience as a painter and graphic artist.<br>At the moment,i am studying full stack Web Development at codefactory.I find it very interesting.Every second,i learn something new.</p>
 		</div>
 	</div>
 </main>
@@ -34,7 +34,7 @@
 <footer class="flexCon">
 	<div class="flexCon memberFooter">
 		<p>email:mahtabnahayati@gmail.com</p>
-		<p>TelNumber:+436 503 066 790</p>
+		<p>Tel:+43-650-306-6790</p>
 	</div>
 </footer>
 <script type="text/javascript" src="script.js"></script>
