adds carousel(wonky)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
-<div class="background">
+<div class="backgrounds fade" id="slide1">
 <div class="container">	
 <main class="indexMain">
 	<div class="teamHeading">Our Team</div>
@@ -48,6 +48,73 @@
 </main>
 </div>
 </div>
+
+<div class="backgrounds fade" id="slide2">
+<div class="container">	
+<main class="indexMain">
+	<div class="teamHeading">Our Team</div>
+	<div class="flexCon text-teamCon">
+		<div class="teamCon">	
+			<div class="flexCon team">
+				<div class="flexCon member">
+					<img id="member1" src="img/Pascal.jpg">
+					<div>Pascal</div>
+				</div>
+				<div class="flexCon member">
+					<img id="member2" src="img/Sade.jpg">
+					<div>Sade</div>
+				</div>
+			</div>
+			<div class="flexCon team">
+				<div class="flexCon member">
+					<img id="member3" src="img/Mahtab.jpg">
+					<div>Mahtab</div>
+				</div>
+				<div class="flexCon member">
+					<img id="member4" src="img/Ibrahim.jpg">
+					<div>Ibrahimi</div>
+				</div>
+			</div>
+		</div>
+		<div class="textBox">We as Web developers design and create websites. We are responsible for the look of the site. We are also responsible for the site’s technical aspects, such as its performance and capacity, which are measures of a website’s speed and how much traffic the site can handle. In addition, web developers may create content for the site.</div>
+	</div>
+</main>
+</div>
+</div>
+
+<div class="backgrounds fade" id="slide3">
+<div class="container">	
+<main class="indexMain">
+	<div class="teamHeading">Our Team</div>
+	<div class="flexCon text-teamCon">
+		<div class="teamCon">	
+			<div class="flexCon team">
+				<div class="flexCon member">
+					<img id="member1" src="img/Pascal.jpg">
+					<div>Pascal</div>
+				</div>
+				<div class="flexCon member">
+					<img id="member2" src="img/Sade.jpg">
+					<div>Sade</div>
+				</div>
+			</div>
+			<div class="flexCon team">
+				<div class="flexCon member">
+					<img id="member3" src="img/Mahtab.jpg">
+					<div>Mahtab</div>
+				</div>
+				<div class="flexCon member">
+					<img id="member4" src="img/Ibrahim.jpg">
+					<div>Ibrahimi</div>
+				</div>
+			</div>
+		</div>
+		<div class="textBox">We as Web developers design and create websites. We are responsible for the look of the site. We are also responsible for the site’s technical aspects, such as its performance and capacity, which are measures of a website’s speed and how much traffic the site can handle. In addition, web developers may create content for the site.</div>
+	</div>
+</main>
+</div>
+</div>
+
 <footer class="flexCon">
 	<div class="slogan">Teamwork makes the Dream work!</div>
 </footer>
