--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="backgrounds fade" id="slide1"></div>
 	<div class="backgrounds fade" id="slide2"></div>
 	<div class="backgrounds fade" id="slide3"></div>
-	
+
 <div class="container">	
 <main class="indexMain">
 	<div class="teamHeading">Our Team</div>
@@ -28,11 +28,11 @@
 		<div class="teamCon">	
 			<div class="flexCon team">
 				<div class="flexCon member">
-					<img id="member1" src="img/Pascal.jpg">
+					<img id="member1" src="img/Pascal-real.jpg">
 					<div>Pascal</div>
 				</div>
 				<div class="flexCon member">
-					<img id="member2" src="img/Sade.jpg">
+					<img id="member2" src="img/Sade-real.jpg">
 					<div>Sade</div>
 				</div>
 			</div>
