--- a/member-Pascal.html
+++ b/member-Pascal.html
@@ -16,12 +16,16 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
-<div class="background">
+<div class="backCon">
+	<div class="backgrounds fade" id="slide1"></div>
+	<div class="backgrounds fade" id="slide2"></div>
+	<div class="backgrounds fade" id="slide3"></div>
+
 <div class="container">	
 <main class="indexMain">
 	<div class="flexCon teamMember">
 		<div class="flexCon imgCon">
-			<img src="img/Pascal.jpg">
+			<img src="img/Pascal-real.jpg">
 		</div>
 		<div class="textCon">
 			<h2>Pascal Tonsern</h2>
