modifies photos, fixs backgrounds on single page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div>Mahtab</div>
 				</div>
 				<div class="flexCon member">
-					<img id="member4" src="img/Ibrahim.jpg">
+					<img id="member4" src="img/Faisal-real.png">
 					<div>Ibrahimi</div>
 				</div>
 			</div>
