--- a/member-Pascal.html
+++ b/member-Pascal.html
@@ -44,6 +44,10 @@
 		<p> &#x260F; +43-676-714-7237</p>
 	</div>
 </footer>
+<span id="member1"></span>
+<span id="member2"></span>
+<span id="member3"></span>
+<span id="member4"></span>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
