--- a/member-Mahtab.html
+++ b/member-Mahtab.html
@@ -16,12 +16,17 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
-<div class="background">
+<div class="backCon">
+	<div class="backgrounds fade" id="slide1"></div>
+	<div class="backgrounds fade" id="slide2"></div>
+	<div class="backgrounds fade" id="slide3"></div>
+	<div class="backgrounds fade" id="slide4"></div>
+
 <div class="container">	
 <main class="indexMain">
 	<div class="flexCon teamMember">
 		<div class="flexCon imgCon">
-			<img src="img/Mahtab.jpg">
+			<img src="img/Mahtab-real.jpg">
 		</div>
 		<div class="textCon">
 			<h2>Mahtab Nahayati</h2>
@@ -37,6 +42,10 @@
 		<p>Tel:+43-650-306-6790</p>
 	</div>
 </footer>
+<span id="member1"></span>
+<span id="member2"></span>
+<span id="member3"></span>
+<span id="member4"></span>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
