--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<div class="backgrounds fade" id="slide1"></div>
 	<div class="backgrounds fade" id="slide2"></div>
 	<div class="backgrounds fade" id="slide3"></div>
+	<div class="backgrounds fade" id="slide4"></div>
 
 <div class="container">	
 <main class="indexMain">
@@ -38,7 +39,7 @@
 			</div>
 			<div class="flexCon team">
 				<div class="flexCon member">
-					<img id="member3" src="img/Mahtab.jpg">
+					<img id="member3" src="img/Mahtab-real.jpg">
 					<div>Mahtab</div>
 				</div>
 				<div class="flexCon member">
