--- a/member-Ibrahimi.html
+++ b/member-Ibrahimi.html
@@ -16,12 +16,17 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
-<div class="background">
+<div class="backCon">
+	<div class="backgrounds fade" id="slide1"></div>
+	<div class="backgrounds fade" id="slide2"></div>
+	<div class="backgrounds fade" id="slide3"></div>
+	<div class="backgrounds fade" id="slide4"></div>
+
 <div class="container">	
 <main class="indexMain">
 	<div class="flexCon teamMember">
 		<div class="flexCon imgCon">
-			<img src="img/Ibrahim.jpg">
+			<img src="img/Faisal-real.png">
 		</div>
 		<div class="textCon">
 			<h2><strong>Faisal Ibrahimi</strong></h2>
@@ -39,6 +44,10 @@
 		<p><strong>Tel No:</strong> +43(0)660-623-5365</p>
 	</div>
 </footer>
+<span id="member1"></span>
+<span id="member2"></span>
+<span id="member3"></span>
+<span id="member4"></span>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
