--- a/member-Pascal.html
+++ b/member-Pascal.html
@@ -20,6 +20,7 @@
 	<div class="backgrounds fade" id="slide1"></div>
 	<div class="backgrounds fade" id="slide2"></div>
 	<div class="backgrounds fade" id="slide3"></div>
+	<div class="backgrounds fade" id="slide4"></div>
 
 <div class="container">	
 <main class="indexMain">
