--- a/member-Sade.html
+++ b/member-Sade.html
@@ -17,12 +17,17 @@
 	<div>Blogs</div>
 	<div>Newsletter</div>
 </nav>
-<div class="background">
+<div class="backCon">
+	<div class="backgrounds fade" id="slide1"></div>
+	<div class="backgrounds fade" id="slide2"></div>
+	<div class="backgrounds fade" id="slide3"></div>
+	<div class="backgrounds fade" id="slide4"></div>
+
 <div class="container">	
 <main class="indexMain">
 	<div class="flexCon teamMember">
 		<div class="flexCon imgCon">
-			<img src="img/Sade.jpg">
+			<img src="img/Sade-real.jpg">
 		</div>
 		<div class="textCon">
 			<h2>Sade Otaru</h2>
@@ -38,6 +43,10 @@
 		<p> &#x260F; 0676/3362941</p>
 	</div>
 </footer>
+<span id="member1"></span>
+<span id="member2"></span>
+<span id="member3"></span>
+<span id="member4"></span>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
