--- a/member-Sade.html
+++ b/member-Sade.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="textCon">
 			<h2>Sade Otaru</h2>
-		    <p>Sade! wants to be a future Webdesigner,its alot of commitment but its wort it.I had no knowlege of Html/Css until CodeFactory showed up.</p>
+		    <p>Sade! wants to be a future Webdesigner,its alot of commitment but its wort it.I had no knowledge of Html/Css until CodeFactory showed up.</p>
 		</div>
 	</div>
 </main>
