--- a/member-Ibrahimi.html
+++ b/member-Ibrahimi.html
@@ -30,7 +30,7 @@
 		</div>
 		<div class="textCon">
 			<h2><strong>Faisal Ibrahimi</strong></h2>
-			<p><strong>Hi..<br><br> </strong>This is Faisal. I am 20 years old i born in Badakhshan,Afghanistan.Since 2 years i live in Austria.<br><br> I studied (IT) in Afghanistan. 
+			<p><strong>Hi..<br><br> </strong>This is Faisal. I am 20 years old I was born in Badakhshan,Afghanistan.Since 2 years i live in Austria.<br><br> I studied (IT) in Afghanistan. 
 				I am currently learning Web Development in CodeFactory.It's intersting to learn programming.<br><br>  I like to learn more about programming. I like to be a good Web Developer in the future.
 			</p>
 		</div>
