--- a/member-Sade.html
+++ b/member-Sade.html
@@ -8,15 +8,21 @@
 </head>
 <body>
 <header class="flexCon">
-	<div class="flexCon logoCon"><img id="home" src="img/Logo02.jpg"></div>
+	<div class="flexCon logoCon"><img src="img/Logo02.jpg"></div>
 	<div><span>evelopaz</span></div>
 </header>
-<nav class="flexCon">
+ <div class="topnav">
+  <a id="home" class="active" href="#home">Home</a>
+  <a href="http://www.bbc.com/news/science_and_environment">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+<!--<nav class="flexCon">
 	<div>Services</div>
 	<div>Contact</div>
 	<div>Blogs</div>
 	<div>Newsletter</div>
-</nav>
+</nav>-->
 <div class="backCon">
 	<div class="backgrounds fade" id="slide1"></div>
 	<div class="backgrounds fade" id="slide2"></div>
