renames files, adds links in JS to the single member pages

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
- <!--
-<nav class="flexCon">
+<!-- <nav class="flexCon">
 	<div>Services</div>
 	<div>Contact</div>
 	<div>Blogs</div>
 	<div>Newsletter</div>
-</nav>-->
+</nav> -->
 <div class="backCon">
 	<div class="backgrounds fade" id="slide1"></div>
 	<div class="backgrounds fade" id="slide2"></div>
@@ -31,39 +30,31 @@
 
 <div class="container">	
 <main class="indexMain">
-	<div class="teamHeading">Our Team</div>
-	<div class="flexCon text-teamCon">
-		<div class="teamCon">	
-			<div class="flexCon team">
-				<div class="flexCon member">
-					<img id="member1" src="img/Pascal-real.jpg">
-					<div>Pascal</div>
-				</div>
-				<div class="flexCon member">
-					<img id="member2" src="img/Sade-real.jpg">
-					<div>Sade</div>
-				</div>
-			</div>
-			<div class="flexCon team">
-				<div class="flexCon member">
-					<img id="member3" src="img/Mahtab-real.jpg">
-					<div>Mahtab</div>
-				</div>
-				<div class="flexCon member">
-					<img id="member4" src="img/Faisal-real.png">
-					<div>Ibrahimi</div>
-				</div>
-			</div>
+	<div class="flexCon teamMember">
+		<div class="flexCon imgCon">
+			<img src="img/Pascal-real.jpg">
 		</div>
-		<div class="textBox">We as Web developers design and create websites. We are responsible for the look of the site. We are also responsible for the site’s technical aspects, such as its performance and capacity, which are measures of a website’s speed and how much traffic the site can handle. In addition, web developers may create content for the site.</div>
+		<div class="textCon">
+			<h2>Pascal Tonsern</h2>
+			<p>Hi there, I am currently studying at CodeFactory to become a Web Developer.</p>
+			<p>It is an amazing experience, working with lots of different individuals and seeing all kinds of new ideas and ways to approach challenges.</p>
+			<p>I have a little bit of background knowledge of scripting languages (I went through hell with C.... no "++" just C). So i am confident in my JavaScript skills.</p>
+			<p>I also brought some knowledge about HTML CSS to the course. Mostly selftaught but it was fun to research and even more fun to find out that not everything , regarding coding, is as tiresome as C :P.</p>
+		</div>
 	</div>
 </main>
 </div>
-</div> <!-- backCon -->
-
+</div>
 <footer class="flexCon">
-	<div class="slogan">Teamwork makes the Dream work!</div>
+	<div class="flexCon memberFooter">
+		<p>pascal1805@hotmail.de</p>
+		<p> &#x260F; +43-676-714-7237</p>
+	</div>
 </footer>
+<span id="member1"></span>
+<span id="member2"></span>
+<span id="member3"></span>
+<span id="member4"></span>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
